src/objects/EmployeeTest__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <referenceTo>PersonTest__c</referenceTo>
        <relationshipLabel>EmployeesTest</relationshipLabel>
        <relationshipName>EmployeesTest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deportment__c</fullName>
        <label>deportment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>EmployeeTest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>companyName__c</columns>
        <columns>deportment__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EmployeeTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmployeesTest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>